examples/test/testpolicy3074.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3074
  namespace: namespace164
spec:
  podSelector:
    matchLabels:
      key35: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value41
          key17: value39
          key8: value30
      podSelector:
        matchLabels:
          key0: value38
          key26: value44
          key9: value18
